src/views/login/login.module.scss
@use "../../stylesheets/abstracts/variables";

.login {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;

  .container {
    background-color: variables.$white;
    padding: variables.$spacing-xlarge variables.$spacing-xxlarge;
    border-radius: variables.$border-radius-mid;
    color: variables.$primary-color;
    height: 500px;
    width: 500px;
    display: flex;
    flex-direction: column;
    justify-content: center;

    @media only screen and (max-width: variables.$screen-size-tablet) {
      padding: variables.$spacing-large variables.$spacing-xlarge;
    }

    h1 {
      margin: 0;
      margin-bottom: variables.$spacing-large;
    }

    .loginForm {
      display: flex;
      flex-direction: column;
      align-items: flex-start;

      label {
        display: flex;
        flex-direction: column;
        margin: variables.$spacing-small 0;

        input {
          border: 2px solid variables.$mid-grey;
          padding: variables.$spacing-small;
          margin: variables.$spacing-xsmall 0;
        }
      }

      .submitButton {
        margin-top: variables.$spacing-small;
      }
    }

    .error {
      color: variables.$error-color;
      margin: 0;
      margin-top: variables.$spacing-xsmall;
      font-size: variables.$font-size-subtext;
    }
  }
}

